--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="Js_3.html" title="2022-08-31">조건문 문법</a></li>
             <li><a href="Js_4.html" title="2022-09-01">Array & Loop</a></li>
             <li><a href="Js_5/Js_5.html" title="2022-09-02">Function</a></li>
-            <li><a href="Js_6/Js_6.html" title="2022-09-02">Object</a></li>
+            <li><a href="Js_6\Js_6.html" title="2022-09-02">Object</a></li>
           </p>
         </ol>
       </nav>
