2022-09-04 React 공부중 추가된 내용
지난번 미완성했던 Meberlist 걸러주는 기능이다.

--- a/Js_6/Js_6.html
+++ b/Js_6/Js_6.html
@@ -40,9 +40,10 @@
   </body>
 <footer>
 
-  <script type="text/javascript" src="Js_6_var.js"></script>
+  <script type="text/javascript" src="Js_6_ColorEditor.js"></script>
   <script type="text/javascript" src="Js_6_daynightHandler.js"></script>
-    <script type="text/javascript" src="Js_6_MemberList.js"></script>
+  <script type="text/javascript" src="Js_6_MemberList.js"></script>
+  <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 </footer>
 
 </html>
